<resources>
    <string name="app_name">DeadLiner</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="iconDescription">User Icon</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="title_activity_timeline">TimelineActivity</string>
    <string name="today">Today</string>
    <string name="timeline">Timeline</string>
    <string name="subjects">Subjects</string>
    <string name="todos">Todos</string>
    <string name="more">More</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="events">Events</string>
    <string name="reminders">Reminders</string>
</resources>
