<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_today"
            android:icon="@drawable/ic_today_black_48px"
            android:title="@string/today" />
        <item
            android:id="@+id/nav_timeline"
            android:icon="@drawable/ic_timeline_black_48px"
            android:title="@string/timeline" />
        <item
            android:id="@+id/nav_subjects"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/subjects" />
        <item
            android:id="@+id/nav_todos"
            android:icon="@drawable/ic_check_box_black_24px"
            android:title="@string/todos" />
    </group>

    <item android:title="@string/more">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_48px"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_help_outline_black_48px"
                android:title="@string/help" />
        </menu>
    </item>

</menu>
